# usbpeek

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  cpu_usb_check.py  pyproject.toml  requirements.txt  usbpeek.py
.github/workflows/: ci.yml
tests/: test_cpu_usb_check.py  test_usbpeek.py
