[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpu-direct-usb-linux"
version = "1.0.0"
description = "A Python utility to detect whether your USB devices are connected through CPU-direct or Chipset USB ports on Linux."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/lance0/cpu-direct-linux"
Repository = "https://github.com/lance0/cpu-direct-linux"
Issues = "https://github.com/lance0/cpu-direct-linux/issues"

[project.scripts]
cpu-usb-check = "cpu_usb_check:main"

[tool.setuptools]
packages = ["."]

[tool.setuptools.package-data]
"" = ["README.md", "LICENSE"]

[tool.black]
line-length = 88
target-version = ['py36']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true