[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpu-direct-usb-linux"
version = "1.0.0"
description = "A Python utility to detect whether your USB devices are connected through CPU-direct or Chipset USB ports on Linux."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "lance0"}]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Hardware",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/lance0/cpu-direct-linux"
Repository = "https://github.com/lance0/cpu-direct-linux"
Issues = "https://github.com/lance0/cpu-direct-linux/issues"

[project.scripts]
cpu-usb-check = "cpu_usb_check:main"

[tool.setuptools]
packages = { find = { include = ["cpu_usb_check*"] } }
package-data = { "*" = ["README.md", "LICENSE"] }

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true