[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usbpeek"
version = "1.0.0"
description = "A Python utility to analyze USB device latency and topology on Linux."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "lance0"}]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Hardware",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/lance0/usbpeek"
Repository = "https://github.com/lance0/usbpeek"
Issues = "https://github.com/lance0/usbpeek/issues"

[project.scripts]
usbpeek = "usbpeek:main"

[tool.setuptools]
packages = { find = { include = ["usbpeek*"] } }
package-data = { "*" = ["README.md", "LICENSE"] }

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
